# django-admin-shuffle

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements-test.txt  setup.cfg  tox.ini
admin_shuffle/: __init__.py  admin.py  apps.py
admin_shuffle/templates/admin/: admin_shuffle.html
admin_shuffle/templates/admin_shuffle/: change_list.html
django_shuffle/: apps.py
example/: admin.py  settings.py
example/migrations/: 0001_initial.py
tests/: admin.py  models.py  settings.py  test_admin.py
tests/templates/tests/: change_list.html
