[metadata]
name = django-admin-shuffle
version = 0.1.6
description = Simply shuffles objects on admin changelist view
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jae Joon Kim
author_email = ojayyezzir@gmail.com
url = https://github.com/ojayyezzir/django-admin-shuffle
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    example.*
    tests
    tests.*
